crates/pack/tests/compile_fail/kernel_authority_module_hidden.rs
// Contract: kernel-authority helpers are not available to normal consumers.

use converge_pack::{fact::kernel_authority, ContextKey};

fn main() {
    let _ = kernel_authority::new_fact(ContextKey::Seeds, "seed-1", "seed content");
}
